    4. Enable to delete display node.
2020-06-04
    1. Add header for all pages.
    2. Add current time/total pf display in backend page.
    3. Fix bug that collecting crash if dm Node name != Host name.
2020-06-05
    1. Fix bug if someone start vm between pm and vm collection, vm would be shutdown by this tool.
2020-06-09
    1. Enable display node change from pm if the server could not reach vm.
    2. Add timeout for exec cmd  to avoid stuck if someone shut down vm after ssh established.
    3. Adjust some trace info.
2020-06-10
    1. Fix bug that some str not convert to unicode if muti pf changed.
    2. Fix bug empty date would cause submit platform failure.
    3. Fix bug pf with empty date is a used pf.
    4. Fix bug when restart the display is empty.
2020-06-11
    1. Add function to start local xshell if db click node name.
    2. Reduce the time of transaction for modifying display of stopped node.
    3. Fix some code error.
2020-06-12
    1. Exit if first check conf error.
2020-07-07
1. Add user reg function. Only user in tai2 could reg. There are white list and black list.
2. Add user login and auth function. User could use mobile and email to login.
3. Limit user activity in page platform. Only getting right from no rights platform or release right are permitted.
4. Limit user activity in page display. Only the owner could modify display of a dm.
5. To display the owner of a dm.
6. Add auth user display in header.
7. Add logout function.
8. Modify session paramters.
9. Add admin page.
2020-07-08
1. Optimise the admin pages.
2. Fix bug the owner of dm would lose.
3. Optimise the page to display dm host/os/user.
4. Add display min/all buttons in display page.
5. Add DEBUG open/close function.
6. Modify session period from 1 day to 7 days.
2020-07-09~2020-08-11
1. Add display mine/all functions for platform/display pages.
2. Fix bugs on backend2 page.
3. Modify the update frequency to get user list from tai2.
4. Add passwd change function.
5. etc.