@@ -63,6 +63,7 @@ class display_machine(models.Model):
   IP = models.CharField(max_length=100, default='')
   Host_name = models.CharField(max_length=20, default='')
   Thalix = models.CharField(max_length=10, default='11.0')
+  Resolution = models.CharField(max_length=10, default='')
   Owner = models.CharField(max_length=150, null=True, default='')
   Last_modified = models.DateTimeField(auto_now=True)
   Created = models.DateTimeField(auto_now_add=True)
@@ -78,6 +79,7 @@ class X_server(models.Model):
   Display_machine = models.ForeignKey(display_machine, on_delete=models.SET_NULL, null=True, default=None)
   Port = models.IntegerField()
   Tty = models.IntegerField()
+  Valid = models.BooleanField(default=True)
   Active = models.BooleanField(default=False)
 
   class Meta:
