@@ -1,8 +1,9 @@
 # -*- coding: utf-8 -*-
 
 import re
+import os
 if __name__ == "__main__":
-  import os, django
+  import django
   os.environ.setdefault("DJANGO_SETTINGS_MODULE", "Platform_Map.settings")
   django.setup()
 from GetPlatformInfo.machine import Machine
@@ -10,6 +11,8 @@ from GetPlatformInfo.sqlOperator import SQLOperator
 from GetPlatformInfo.sqlDisplayMachine import SQLDisplayMachine
 from Display_Platform_Info.models import X_server, display_machine
 import myLogging
+import platform as os_pf
+import socket
 
 
 class XServer(Machine, SQLOperator):
@@ -21,10 +24,12 @@ class XServer(Machine, SQLOperator):
     self.set_filter_function(X_server.objects.filter)
     self.dm_db_inst = None
     self.active_tty = -1
+    self.resolution = 'invalid'
     self.attr = {'Host': login,
                 # 'Display_machine': None,
                  'Port': 0,
                  'Tty': 0,
+                 'Valid': True,
                  'Active': False,
                  }
 
@@ -50,20 +55,26 @@ class XServer(Machine, SQLOperator):
     if tmp_out:
       self.active_tty = int(tmp_out)
     self.execute_cmd('ps -ef|grep Xorg')
-    for line in self.stdout:
+    tmp_out = self.stdout.read().split("\n")
+    for line in tmp_out:
       fields = re.split('\s+', line)
-      if fields[7] == '/usr/bin/Xorg' and fields[5].find('tty') != -1:
-        current_tty = int(fields[5].replace('tty', ''))
-        self.attr.update({
-          'Host': self.get_hostname(),
-          'Tty': current_tty,
-          'Port': 6000 + int(fields[8].replace(':', '') if fields[8].startswith(':') else 0),
-          'Display_machine': self.get_display_machine(),
-          'Active': current_tty == self.active_tty,
-          })
-        myLogging.logger.info(self.attr)
-        self.save()
-        XServer.xs_list.add(self.get_id())
+      if (len(fields) > 8):
+        if fields[7] == '/usr/bin/Xorg' and fields[5].find('tty') != -1:
+          current_tty = int(fields[5].replace('tty', ''))
+          self.attr.update({
+            'Host': self.get_hostname(),
+            'Tty': current_tty,
+            'Port': 6000 + int(fields[8].replace(':', '') if fields[8].startswith(':') else 0),
+            'Display_machine': self.get_display_machine(),
+            'Valid': self.check_x_valid(timeout, "%s.0"%fields[8]),
+            'Active': current_tty == self.active_tty,
+            })
+          myLogging.logger.info(self.attr)
+          self.save()
+          XServer.xs_list.add(self.get_id())
+    sql_dm.set_resolution(self.resolution)
+    sql_dm.save()
+    self.dm_db_inst = sql_dm.db_inst
     self.close_open_file()
     self.close_ssh()
 
@@ -84,6 +95,30 @@ class XServer(Machine, SQLOperator):
     if dm:
       return dm
     return None
+
+  def check_x_valid(self, timeout, ix):
+    valid = False
+    if os_pf.system() == "Windows":
+      self.execute_cmd('xrandr -display %s' % (ix,), redirect_stderr=False, timeout=timeout)
+      try:
+        t_buf = self.stdout.read().split('\n')
+      except socket.timeout:
+        t_buf = ''
+    else:
+      fp = os.popen("timeout -s 9 %d xrandr -display %s%s" % (int(timeout), self.get_hostname(), ix))
+      t_buf = fp.read().split('\n')
+    t_2 = filter(lambda x: x.count('*'), t_buf)
+    if t_2:
+      t_buf = t_2[0].split()
+      if self.get_thalix().count('11'):
+        if len(t_buf) > 3:
+          self.resolution = "".join(t_buf[1:4])
+          valid = True
+      else:
+        if t_buf:
+          self.resolution = t_buf[0]
+          valid = True
+    return valid
 
 
 if __name__ == "__main__":
