@@ -76,6 +76,7 @@
                     <div class="dm_host platform-node-name">
                         <div class="dm-host-name">{{ d.n.Node }}</div>
                         <div class="dm-os">{{ d.n.os }}</div>
+                        <div class="dm-resolution">{{ d.n.res }}</div>
                         <div class="dm-usr">{{ d.n.usr }}</div>
                         <div class="clear_float"></div>
                     </div>
@@ -90,7 +91,7 @@
                     <input type="hidden" id="last-modified-{{ d.n.Node }}" value="{{ d.n.n_t}}" />
                     {%  for x in d.xs %}
                             <div class="tty_info">
-                                <div class="tty_text" ondblclick="dbclick_display_tty(this)"  active="{{ x.x.Active }}">TTY{{ x.x.Tty }}</div>
+                                <div class="tty_text" ondblclick="dbclick_display_tty(this)"  active="{{ x.x.Active }}" valid="{{ x.x.Valid }}">TTY{{ x.x.Tty }}</div>
                                 <div class="node_info" conflict="{{ x.conflict }}">
                                    {% ifequal x.n_name '' %}
                                    <div class="node_text" title="{{ x.n_name }}" ondblclick="dbclick_display_nodes(this)">&nbsp;</div>
